--- a/xenofobia/templates/xenofobia/register.html
+++ b/xenofobia/templates/xenofobia/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>注册</title>
+    <title>Registrar</title>
     
     <!-- 加载 static 标签 -->
     {% load static %}
@@ -106,7 +106,7 @@
 <body>
 
     <div class="container">
-        <h2>注册新账户</h2>
+        <h2>Registrar</h2>
 
         <!-- 显示反馈消息 -->
         {% if messages %}
@@ -123,21 +123,21 @@
         <form method="post">
             {% csrf_token %}
             
-            <label for="name">名字:</label>
+            <label for="name">Nombre:</label>
             <input type="text" name="name" required>
             
-            <label for="email">邮箱:</label>
+            <label for="email">Correo:</label>
             <input type="email" name="email" required>
             
-            <label for="password">密码:</label>
+            <label for="password">Contraseña:</label>
             <input type="password" name="password" required>
             
-            <button type="submit">注册</button>
+            <button type="submit">Registrar</button>
         </form>
 
         <!-- 登录链接 -->
         <div class="login-link">
-            <p>已有账户? <a href="{% url 'inicial' %}">立即登录</a></p>
+            <p>已有账户? <a href="{% url 'inicial' %}">inicio sesion</a></p>
         </div>
     </div>
 
