--- a/xenofobia/templates/xenofobia/contar.html
+++ b/xenofobia/templates/xenofobia/contar.html
@@ -13,7 +13,7 @@
             margin-top: 50px;
         }
         .form-container {
-            max-width: 600px;
+            max-width: 530px;
             margin: 0 auto;
             padding: 20px;
             background-color: #f8f8f8;
@@ -55,7 +55,7 @@
                     <button type="submit" class="w3-button w3-blue">Enviar</button>
                 </div>
             </form>
-            <a href="{% url 'main' %}" class="back-link">Volver a Main</a>
+            <a href="{% url 'main' %}" class="back-link">Volver a la página principal</a>
         </div>
     </div>
 </body>
