--- a/xenofobia/templates/xenofobia/register.html
+++ b/xenofobia/templates/xenofobia/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registrar</title>
+    <title>Registro</title>
     
     <!-- 加载 static 标签 -->
     {% load static %}
@@ -19,7 +19,7 @@
         }
 
         .container {
-            max-width: 400px;
+            max-width: 420px;
             margin: 0 auto;
             padding: 20px;
             background-color: #ffffff;
@@ -41,7 +41,7 @@
         }
 
         input {
-            width: 100%;
+            width: 95%;
             padding: 10px;
             margin: 10px 0;
             border-radius: 4px;
@@ -106,7 +106,7 @@
 <body>
 
     <div class="container">
-        <h2>Registrar</h2>
+        <h2>Registrate!</h2>
 
         <!-- 显示反馈消息 -->
         {% if messages %}
@@ -132,12 +132,12 @@
             <label for="password">Contraseña:</label>
             <input type="password" name="password" required>
             
-            <button type="submit">Registrar</button>
+            <button type="submit">Registrarse</button>
         </form>
 
         <!-- 登录链接 -->
         <div class="login-link">
-            <p>已有账户? <a href="{% url 'inicial' %}">inicio sesion</a></p>
+            <p>¿Ya tienes una cuenta? <a href="{% url 'inicial' %}">Inicia Sesión</a></p>
         </div>
     </div>
 
